--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,1 @@
-VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
-VITE_AUTH_FORM_URL=https://oauth-form.vercel.app
+VITE_API_URL=https://mp-emp-demo.lenta.com/dev/mrm-tasks
