--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "dest": "/"
     },
     {
-      "src": "/login-callback",
+      "src": "/login-callback/(\\d+)[\\/]?",
       "dest": "/"
     },
     {
