updated routing settings for vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       "dest": "/"
     },
     {
+      "src": "/dashboard.*",
+      "dest": "/"
+    },
+    {
       "src": "/",
       "dest": "/"
     }
