--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form-mui": "7.4.1",
     "react-number-format": "5.4.3",
     "react-router-dom": "6.23.0",
+    "react-router-use-location-state": "3.1.2",
     "vite-plugin-svgr": "4.3.0",
     "yup": "1.6.1"
   },
