refactoring: following FSD

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@/*": ["src/*"],
       "@shared/*": ["src/shared/*"],
       "@entities/*": ["src/entities/*"],
-      "@widgets/*": ["src/widgets/*"]
+      "@widgets/*": ["src/widgets/*"],
+      "@features/*": ["src/features/*"]
     },
 
     /* Additional Checks */
