--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "5.15.17",
     "@mui/lab": "5.0.0-alpha.175",
     "@mui/material": "5.16.14",
+    "@tanstack/react-query": "5.67.1",
     "ahooks": "3.8.4",
     "axios": "1.7.9",
     "clsx": "2.1.1",
@@ -31,6 +32,7 @@
     "yup": "1.6.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "5.66.1",
     "@types/node": "20.12.11",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -38,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
     "@vitejs/plugin-react": "4.3.4",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-eslint-comments": "3.2.0",
