--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "5.0.0-alpha.175",
     "@mui/material": "5.16.14",
     "@tanstack/react-query": "5.67.1",
+    "@tanstack/react-query-devtools": "5.67.1",
     "ahooks": "3.8.4",
     "axios": "1.7.9",
     "clsx": "2.1.1",
