--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ahooks": "3.8.4",
     "axios": "1.7.9",
     "clsx": "2.1.1",
+    "date-fns": "4.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
