--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "1.7.9",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
+    "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "5.66.1",
+    "@types/lodash": "4.17.16",
     "@types/node": "20.12.11",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
