--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
     "react-hook-form-mui": "7.4.1",
+    "react-modal-promise": "1.0.2",
     "react-number-format": "5.4.3",
     "react-router-dom": "6.23.0",
     "react-router-use-location-state": "3.1.2",
