--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prettier": "3.4.2",
     "typescript": "5.2.2",
     "vite": "5.4.11",
+    "vite-plugin-mock-dev-server": "1.8.4",
     "vitest": "2.1.9"
   },
   "engines": {
