--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "lodash": "4.17.21",
+    "notistack": "3.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
