--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
     "noImplicitOverride": true,                  /* Ensure overriding members in derived classes are marked with an 'override' modifier. */
     "noPropertyAccessFromIndexSignature": true,  /* Require undeclared properties from index signatures to use element accesses. */
   },
-  "include": ["src"],
+  "include": ["src", "mock"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
