--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "4.17.21",
     "notistack": "3.0.2",
     "react": "18.3.1",
+    "react-day-picker": "9.6.2",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
     "react-hook-form-mui": "7.4.1",
@@ -59,6 +60,7 @@
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-unicorn": "45.0.2",
     "prettier": "3.4.2",
+    "sass": "1.86.0",
     "typescript": "5.2.2",
     "vite": "5.4.11",
     "vite-plugin-mock-dev-server": "1.8.4",
